corpus/cpp/coroutine/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.cpp:6:5: error: coroutine promise type error
help: define a valid promise_type or align the coroutine return type with the coroutine body
why: unable to find the promise type for this coroutine
| src/main.cpp:6:5
|     co_return;
|     ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output